--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
